--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.12.3",
     "framer-motion": "^11.3.6",
     "json-server": "^0.17.4",
+    "plucky-cub-1995-1": "file:",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
